# IOT_base

./: CMakeLists.txt  Config.h  DEBUGGING_GUIDE.md  FILES_REFERENCE.md  HARDWARE_INTEGRATION.md  HOW_TO_ADD_CHIP.md  INDEX.md  Memory.cpp  Memory.h  NETWORK_ARCHITECTURE.md  QUICKSTART.md  RealTimeControl.cpp  RealTimeControl.h  SETUP.md  Task.h  TaskDevice.cpp  TaskDevice.h  TaskNetwork.cpp  TaskNetwork.h  TaskSensor.cpp  TaskSensor.h  WifiNetwork.cpp  WifiNetwork.h  build.ps1  example_mode_switching.cpp  example_simple.cpp  main.cpp  readme.md  sensor_config.h
DeviceIOT/: Common.h  DeviceIOT.ino  Memory.cpp  NetWork_Mqtt.cpp  NetWork_RF.cpp  NetWork_Wifi.cpp  NetWork_Wifi.h  TaskDevice.cpp  TaskNetWork.cpp  TaskSensor.cpp  define_All.h
gpio/: ChipDefs.h  VirtualGPIO.cpp  VirtualGPIO.h
main/: DebugInfo.h  Memory.h  NetWork_Mqtt.h  NetWork_Wifi.cpp  NetWork_config.h  TaskDevice.cpp  TaskDevice.h  TaskNetWork.cpp  TaskNetWork.h  TaskSensor.h
main/Task/: TaskNetWork.cpp  TaskNetWork.h
